--- a/assets/css/classes.css
+++ b/assets/css/classes.css
@@ -1,64 +1,3 @@
-/*
-font-family: 'Montserrat', sans-serif;
-font-family: 'Open Sans', sans-serif;
-*/
-
-:root {
-  --primary-color: #fff;
-  --secundary-color: #550055;
-  --gap: 30px;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  scroll-behavior: smooth;
-  font-size: 62.5%;
-}
-
-body {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 2rem;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Montserrat', sans-serif;
-}
-
-h1 {
-  font-size: 6rem;
-  text-transform: uppercase;
-}
-
-h2 {
-  font-size: 5.5rem;
-  text-transform: uppercase;
-}
-
-h3 {
-  font-size: 5rem;
-  text-transform: uppercase;
-}
-
-h4 {
-  font-size: 4.5rem;
-  text-transform: uppercase;
-}
-
-h5 {
-  font-size: 4rem;
-  text-transform: uppercase;
-}
-
-h6 {
-  font-size: 3.5rem;
-  text-transform: uppercase;
-}
-
 .main-bg {  
   background-image: url('/assets/img/background.svg');
   background-position: center center;
@@ -72,7 +11,7 @@ h6 {
 .main-content {
   max-width: 1400px;
   margin: 0 auto;
-  padding: var(--gap)
+  padding: var(--gap);
 }
 
 .section {
@@ -82,6 +21,15 @@ h6 {
 .d-flex {
   display: flex;
   justify-content: space-between;
+}
+
+.d-grid {
+  display: grid;
+  grid-template-columns: 1fr 1.5fr;
+  gap: var(--gap);
+  margin-top: -7rem;
+  align-items: center;
+  height: 100vh;
 }
 
 .p-fixed {
@@ -94,15 +42,11 @@ h6 {
 }
 
 .respiro {
-  margin-top: 70px;
+  height: 70px;
 }
 
 .logo {
   font-size: 1em;
-}
-
-a {
-  text-decoration: none;
 }
 
 .nav-menu > a {
@@ -121,4 +65,24 @@ a {
   background-color: #550055;
   color: var(--primary-color);
   border-radius: 1rem;
+}
+
+#intro {
+  background-color: #ffffff1c;
+  padding: 1rem;
+  border-radius: 1rem;
+  box-shadow: 2px 2px 2px #ffffff50;
+}
+
+#intro > h2 {
+  margin-bottom: 2rem;
+}
+
+#intro > p {
+  line-height: 3rem;
+}
+
+.web-dev-img {
+  height: 90%;
+  width: 90%;
 }
