--- a/assets/css/classes.css
+++ b/assets/css/classes.css
@@ -126,10 +126,8 @@
 
 .who-am-i {
   color: #550055;
-  min-height: 60vh;
-  max-height: 100vh;
-  min-width: 50vw;
-  max-width: 100vw;
+  height: 60vh;
+  width: 60vw;
 }
 
 .who-am-i p {
