--- a/assets/css/classes.css
+++ b/assets/css/classes.css
@@ -176,6 +176,10 @@
   margin-top: var(--gap);
 }
 
+#portifolio {
+  color: #550055;
+}
+
 .d-flex-img {
   display: flex;
   flex-wrap: wrap;
@@ -200,6 +204,7 @@
 #contact {
   width: 90vw;
   height: 100vh;
+  color: #550055;
 }
 
 #contact-svg {
@@ -220,4 +225,49 @@
 
 .fieldset {
   padding: var(--gap);
+  border: 1px solid;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+}
+
+.fieldset input {
+  margin-bottom: 1rem;
+}
+
+.input-form {
+  height: 4rem;
+  width: 100%;
+  font-family: sans-serif;
+  padding: 1rem;
+}
+
+.text-area-form {
+  height: 10rem;
+  font-family: sans-serif;
+  padding: 1rem;
+}
+
+.form-button {
+  padding: 1rem;
+  font-size: 1.5rem;
+  border-radius: 1rem;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+.form-button:hover {
+  background-color: rgba(128, 128, 128, 0.5);
+}
+
+.obs {
+  font-size: 1rem;
+  color: red;
+  margin-bottom: 1rem;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
 }
